<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <RelativeLayout
        android:id="@+id/mailRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/summer">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="UselessParent">


            <TableRow>

                <Button
                    android:id="@+id/donor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15sp"
                    android:width="230sp"
                    android:height="60sp"
                    android:background="@color/button"
                    android:text="@string/donation" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/receiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15sp"
                    android:width="230sp"
                    android:height="60sp"
                    android:background="@color/button"
                    android:text="@string/receiver" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/contact_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15sp"
                    android:width="230sp"
                    android:height="60sp"
                    android:background="@color/button"
                    android:text="@string/contact_us" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/about_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15sp"
                    android:width="230sp"
                    android:height="60sp"
                    android:background="@color/button"
                    android:text="@string/about_us" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15sp"
                    android:width="230sp"
                    android:height="60sp"
                    android:background="@color/button"
                    android:text="@string/logout" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">


            <RelativeLayout
                android:id="@+id/userTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  "
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/userTitle">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>